--- a/Phase-3-Ansible/roles/monitoring/templates/docker-compose.yml.j2
+++ b/Phase-3-Ansible/roles/monitoring/templates/docker-compose.yml.j2
@@ -93,6 +93,14 @@ services:
     restart: unless-stopped
     ports:
       - "{{ grf_port }}:3000"
+    volumes:
+      - ./files/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+      - ./files/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./files/grafana/provisioning/dashboard.yml:/etc/grafana/provisioning/dashboard.yml
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=grafana
+      - GF_SERVER_ROOT_URL=http://localhost:3000/grafana
     networks:
       - {{ network }}
     healthcheck:
